--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>🍽️ LunchVote</h1>
     <form id="placeForm">
       <input type="text" id="placeInput" placeholder="Add a lunch place..." required />
-      <button type="submit">Add Place</button>
+      <button type="submit">➕</button>
     </form>
     <ul id="placesList"></ul>
   </div>
