--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
                     Add Place
                 </button>
             </form>
+            
+            <!-- Debug button for testing -->
+            <div style="margin-top: 15px; text-align: center;">
+                <button type="button" id="testBtn" style="background: #e53e3e; color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-size: 0.9rem;">
+                    🧪 Test Firebase Connection
+                </button>
+            </div>
         </div>
 
         <!-- Places List Section -->
